# MagonOS-Standalone

./: .dockerignore  .env.example  .env.local.example  .env.prod.example  .env.test.example  .gitignore  .watchmanconfig  AGENTS.md  Procfile  README.md  Start_Platform.command  Taskfile.yml  alembic.ini  docker-compose.yml  pyproject.toml
.codex/: config.toml  project-memory.md
.githooks/: pre-commit  pre-push
alembic/: env.py
config/: scraping_scenarios.json
deploy/: Caddyfile  backend.Dockerfile  web.Dockerfile
docs/: audit-context.md  business-logic-parity-audit.md  business-logic-parity-matrix.csv  current-project-state.md  deployment.md  extraction-notes.md  implementation-log-wave1-foundation.md  implementation-notes.md  operating-layer-migration-audit.md  performance-and-observability.md  repo-workflow.md
gpt_doc/: codex_wave1_spec_ru.docx  platform_documentation_pack_ru_v3.docx  platform_documentation_pack_ru_with_marketing.docx  project_marketing_research_vietnam_ru.docx
scripts/: build_vn_supplier_eval_dataset.py  check_automation_contract.py  check_russian_comment_contract.py  check_russian_locale_integrity.py  check_skill_naming.py  ensure_foundation_infra.sh  ensure_supplier_live_runtime.sh  ensure_web_build.sh  evaluate_supplier_parsing.py  finalize_task.py  foundation_catalog_smoke_check.sh  foundation_files_documents_smoke_check.sh  foundation_messages_dashboards_smoke_check.sh  foundation_migration_check.sh  foundation_offer_smoke_check.sh  foundation_order_smoke_check.sh  foundation_request_smoke_check.sh  foundation_smoke_check.sh  (+44 more)
(+256 files in other folders)
