[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magon-standalone"
version = "0.1.0"
description = "Standalone supplier-intelligence slice extracted from MagonOS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "gunicorn>=22.0",
]

[project.optional-dependencies]
live = [
  "beautifulsoup4>=4.12",
  "requests>=2.32",
  "playwright>=1.52",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
