[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magon-standalone"
version = "0.1.0"
description = "Standalone supplier-intelligence slice extracted from MagonOS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.18",
  "celery>=5.6",
  "email-validator>=2.3",
  "fastapi>=0.136",
  "gunicorn>=22.0",
  "httpx>=0.28",
  "psycopg[binary]>=3.3",
  "python-multipart>=0.0.26",
  "redis>=7.4",
  "sentry-sdk>=2.58.0",
  "sqlalchemy>=2.0",
  "uvicorn>=0.44",
]

[project.optional-dependencies]
live = [
  "beautifulsoup4>=4.12",
  "requests>=2.32",
  "playwright>=1.52",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
